--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,11 @@
     <Button
         android:id="@+id/play"
         android:onClick="play"
-        android:layout_width="wrap_content"
+
+        android:layout_width="0dip"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.25"
+
         android:layout_height="wrap_content"
         android:text="播放"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,11 +36,14 @@
     <Button
         android:id="@+id/stop"
         android:onClick="stop"
-        android:layout_width="wrap_content"
+        android:layout_width="0dip"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.25"
+
         android:layout_height="wrap_content"
         android:text="停止"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/play"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
