--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+
 
     <SurfaceView
         android:id="@+id/surface_view"
@@ -15,8 +18,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <Button
-        android:id="@+id/play"
+        android:id="@+id/playNativeVideo"
         android:onClick="play"
 
         android:layout_width="0dip"
@@ -24,7 +38,7 @@
         app:layout_constraintWidth_percent="0.25"
 
         android:layout_height="wrap_content"
-        android:text="播放"
+        android:text="播放本地视频"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -32,6 +46,26 @@
 
         app:layout_constraintVertical_bias="1"
         app:layout_constraintHorizontal_bias="0.0"/>
+
+
+    <Button
+        android:id="@+id/playVedioStream"
+        android:onClick="play"
+
+        android:layout_width="0dip"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.25"
+
+        android:layout_height="wrap_content"
+        android:text="播放网络直播"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/playNativeVideo"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintVertical_bias="1"
+        app:layout_constraintHorizontal_bias="0.1"/>
+
 
     <Button
         android:id="@+id/stop"
@@ -43,7 +77,7 @@
         android:layout_height="wrap_content"
         android:text="停止"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/play"
+        app:layout_constraintLeft_toRightOf="@+id/playVedioStream"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
